update java -jar command